--- a/index.html
+++ b/index.html
@@ -1,4 +1,57 @@
-yo!sdf
-123
-123
-777
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Hometask 3</title>
+</head>
+<body>
+    <div class="main">
+        <header>
+            <img src="images/logo.jpg" alt="logo">
+        </header>
+        <div class="menu">
+            <ul>
+                <li>Главная</li>
+                <li>Товары</li>
+                <li>О_нас</li>
+                <li>Контакты</li>
+            </ul>
+        </div>
+        <div class="conteiner">
+            <div class="left_menu">
+                <ul>
+                    <li>Ноутбуки</li>
+                    <li>Планшеты</li>
+                    <li>Телефоны</li>
+                    <li>Телевизоры</li>
+                    <li>Бытовая техника</li>
+                    <li>Автотовары</li>
+                </ul>
+            </div>
+            <div class="content">
+                <div class="content_img">
+                    <img src="images/image.jpg" alt="picture">
+                </div>
+                <section class="text">
+                    <span>
+                        Lorem Ipsum - це текст-"риба", що використовується в друкарстві та дизайні. Lorem Ipsum є, фактично, стандартною "рибою" аж з XVI сторіччя, коли невідомий друкар взяв шрифтову гранку та склав на ній підбірку зразків шрифтів. "Риба" не тільки успішно пережила п'ять століть, але й прижилася в електронному верстуванні, залишаючись по суті незмінною. Вона популяризувалась в 60-их роках минулого сторіччя завдяки виданню зразків шрифтів Letraset, які містили уривки з Lorem Ipsum, і вдруге - нещодавно завдяки програмам комп'ютерного верстування на кшталт Aldus Pagemaker, які використовували різні версії Lorem Ipsum.
+                    </span>
+                </section>
+            </div>
+        </div>
+        <footer>
+            <div class="menu">
+                <ul>
+                    <li>Главная</li>
+                    <li>Товары</li>
+                    <li>О_нас</li>
+                    <li>Контакты</li>
+                    <li>2014 &copy; All rights reserved</li>
+                </ul>
+            </div>
+        </footer>
+    </div>
+</body>
+</html>
