--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
     <title>Hometask 3</title>
 </head>
 <body>
-    <div class="main">
+    <div class="wrapper">
         <header>
             <img src="images/logo.jpg" alt="logo">
+            <nav class="menu">
+                <ul>
+                    <li>Главная</li>
+                    <li>Товары</li>
+                    <li>О_нас</li>
+                    <li>Контакты</li>
+                </ul>
+            </nav>
         </header>
-        <div class="menu">
-            <ul>
-                <li>Главная</li>
-                <li>Товары</li>
-                <li>О_нас</li>
-                <li>Контакты</li>
-            </ul>
-        </div>
-        <div class="conteiner">
-            <div class="left_menu">
+        <div class="container">
+            <nav class="left_menu">
                 <ul>
                     <li>Ноутбуки</li>
                     <li>Планшеты</li>
@@ -29,7 +29,7 @@
                     <li>Бытовая техника</li>
                     <li>Автотовары</li>
                 </ul>
-            </div>
+            </nav>
             <div class="content">
                 <div class="content_img">
                     <img src="images/image.jpg" alt="picture">
@@ -48,8 +48,10 @@
                     <li>Товары</li>
                     <li>О_нас</li>
                     <li>Контакты</li>
-                    <li>2014 &copy; All rights reserved</li>
                 </ul>
+                <div class="copyright">
+                    2014 &copy; All rights reserved
+                </div>
             </div>
         </footer>
     </div>
